css/styles.css
@import "reset.css";
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

.container {
    height: 100vh;
    display: grid;
    grid-template-columns: 20rem 1fr;
    grid-template-rows: 13rem 1fr;
    font-family: "Roboto", sans-serif;
}

#sidebar {
    background-color: #1992d4;
    grid-row: 1 / 3;
    font-weight: bold;
    padding: 10px;
    display: flex;
    flex-direction: column;
    gap: 30px;
    position: relative;
    z-index: 10;
    box-shadow: 3px 0px 10px rgba(85, 83, 83, 0.5); 
}

#header {
    background-color: white;
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    display: grid;
    grid-template-columns: 60rem 1fr;
    grid-template-rows: 1fr 1fr;
    padding-left: 30px;
    position: relative;
    z-index: 10;
    box-shadow: 0px 3px 10px rgba(85, 83, 83, 0.5); 
}

#content {
    background-color: whitesmoke;
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 64rem 1fr;
    padding: 24px;
}

#projects {
    grid-row: 1 / 3;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr;
}

.project-card {
    background-color: white;
    width: 30rem;
    height: 12rem;
    border-radius: 24px;
    border-left: 10px solid orange;
    box-shadow: 0px 3px 10px rgba(85, 83, 83, 0.5); 
}

.project-card:hover {
    transform: translateY(-10px); 
}

#annoucements {
    grid-row: 1 / 2;
}

.announcement-card {
    background-color: white;
    width: 30rem;
    height: 20rem;
    border-radius: 24px;
    box-shadow: 0px 3px 10px rgba(85, 83, 83, 0.5); 
}

#trending {
    grid-row: 2 / 3;
}

.trending-card {
    background-color: white;
    width: 30rem;
    height: 20rem;
    border-radius: 24px;
    box-shadow: 0px 3px 10px rgba(85, 83, 83, 0.5); 
}

header.dashboard {
    font-size: 35px;
    display: flex;
    color: white;
    align-items: center;
    gap: 10px;
}

header.dashboard svg {
    width: 50px;
    height: 50px;
    fill: white;
}

#header > form {
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 30px;
}

#header > form svg {
    width: 30px;
    height: 30px;
    fill: black;
}

#header > form input {
    width: 80%;
    height: 50px;
    background-color: ghostwhite;
    border: none;
    padding: 8px;
    border-radius: 25px;
}

.btn-container {
    display: flex;
    gap: 30px;
    justify-content: center;
}

#header > div button {
    color: white;
    background-color: #1992d4;
    width: 120px;
    height: 50px;
    border: none;
    border-radius: 25px;
    font-weight: bold;
}

li {
    list-style-type: none;
    font-size: 25px;
    display: flex;
    align-items: center;
    gap: 10px;
}

li svg {
    width: 25px;
    height: 25px;
    fill: white;
}

a {
    text-decoration: none;
    color: white;
}

ul {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

ul > li:nth-child(6) {
    margin-bottom: 50px;
}

.welcome {
    display: flex;
    gap: 30px;
    align-items: center;
}

.welcome > img {
    width: 80px;
    height: 80px;
    border-radius: 50%;
}

.hello-text {
    display: flex;
    flex-direction: column;
    font-weight: bold;
    gap: 3px;
}

.hello-text > span:last-child {
    font-size: 20px;
}

.notification {
    display: flex;
    align-items: center;
    gap: 30px;
    justify-content: flex-end;
    padding-right: 100px;
}

.notification > img {
    width: 60px;
    height: 60px;
    border-radius: 50%;
}

.notification svg {
    width: 25px;
    height: 25px;
}

.notification span {
    font-weight: bold;
}

